--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-heroicons": "^4.0.0",
     "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
-    "twrnc": "^3.6.8"
+    "tailwindcss-react-native": "^1.7.10",
+    "twrnc": "^3.6.8",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
